# Exp4

./: README.md  invader.py  model.py
QFunction/: qfunc.model
agent/: model.npz  optimizer.npz  target_model.npz
data/: epoch.txt  reward.txt
dqn/: CMakeLists.txt  FOR_IBALAB_USERS.txt  README.txt  action_model.hpp  aggregation_policy.hpp  ale.hpp  dqn.hpp  dqn.prototxt  dqn_decay.prototxt  dqn_decay_solver.prototxt  dqn_simple.prototxt  dqn_test.cpp  main.cpp  model_solver.prototxt  replay_memory.hpp  replay_memory_test.cpp  search.hpp  search_test.cpp  solver_sgd.prototxt  universal_model.hpp
dqn/gtest/: CMakeLists.txt
dqn/gtest/gtest/: gtest-all.cc  gtest.h  gtest_main.cc
dqn/universal_model/: net_conv2_5184x1.prototxt  net_conv2_5184x2.prototxt  net_ip1_1024x3.prototxt  net_ip1_1024x3_q.prototxt  net_ip1_512x1.prototxt  net_ip1_512x2.prototxt  net_ip1_512x3.prototxt  net_ip1_512x3_q.prototxt  solver_conv2_5184x1.prototxt  solver_conv2_5184x2.prototxt  solver_ip1_1024x3.prototxt  solver_ip1_1024x3_q.prototxt  solver_ip1_512x1.prototxt  solver_ip1_512x2.prototxt  solver_ip1_512x3.prototxt  solver_ip1_512x3_q.prototxt
dqn/util/: container.hpp  container_test.cpp  random.hpp
