cmake_minimum_required (VERSION 2.6)
project(gtest)
include_directories(.)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -O3 -march=native")
find_package(Threads)
add_library(gtest STATIC gtest/gtest-all.cc)
add_library(gtest_main STATIC gtest/gtest_main.cc)
target_link_libraries(gtest_main gtest)
target_link_libraries(gtest_main ${CMAKE_THREAD_LIBS_INIT})
